src/objects/Partner_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>DFC_Code__c</fullName>
        <label>DFC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Friends_Created__c</fullName>
        <label>Number Of Friends Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Champions_Identified__c</fullName>
        <label>Number of Champions Identified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Partner External Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Partner Organisation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DFC_Code__c</columns>
        <columns>Partner_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Organisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>